data/derived/sp14/progs/unify/prog4295.ml.out
Characters 37-38:
  let fixpoint (f,b) = wwhile(f (f b), b);;
                                       ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
